web/src/css/flowdetail.less
.flow-detail {
    width: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;

    nav {
        background-color: var(--mitmweb-bg-alt);
    }

    section {
        overflow-y: scroll;
        flex: 1;
        padding: 5px 12px 10px;

        > footer {
            box-shadow: 0 0 3px gray;
            padding: 2px;
            margin: 0;
            height: 23px;
        }
    }

    .close-button {
        margin-top: 2px;
        padding-left: 10px;
        padding-right: 7px;
        color: var(--mitmweb-fg-muted);
        font-size: 15px;
        border: none;
        background: transparent;
        appearance: none;
        -webkit-appearance: none;
    }

    .close-button:hover {
        color: var(--mitmweb-fg-strong);
    }

    .first-line {
        font-family: @font-family-monospace;
        background-color: var(--mitmweb-first-line-bg);
        color: var(--mitmweb-first-line-fg);
        margin: 0 -8px 2px;
        padding: 4px 8px;
        border-radius: 5px;
        word-break: break-all;
        max-height: 100px;
        overflow-y: auto;
    }

    .contentview {
        margin: 0 -12px;
        padding: 0 12px;

        .controls {
            display: flex;
            align-items: center;
            h5 {
                flex: 1;
                font-size: 12px;
                font-weight: bold;
                margin: 10px 0;
            }
        }

        pre button:not(:only-child) {
            margin-top: 6px;
        }
    }

    hr {
        border: 0;
        border-top: 1px solid var(--mitmweb-border-lighter);
        margin: 0;
    }
}

.inline-input {
    display: inline;
    margin: 0 -3px;
    padding: 0 3px;

    border: solid transparent 1px;

    &:hover {
        box-shadow:
            0 0 0 1px rgba(0, 0, 0, 1.25%),
            0 2px 4px rgba(0, 0, 0, 5%),
            0 2px 6px rgba(0, 0, 0, 2.5%);
        background-color: rgba(255, 255, 255, 0.1);
    }

    &[placeholder]:empty:not(:focus-visible):before {
        content: attr(placeholder);
        color: lightgray;
        font-style: italic;
    }

    &[contenteditable] {
        outline-width: 0;
        box-shadow:
            0 0 0 1px rgba(0, 0, 0, 5%),
            0 2px 4px rgba(0, 0, 0, 20%),
            0 2px 6px rgba(0, 0, 0, 10%);
        background-color: rgba(255, 255, 255, 0.2);

        &.has-warning {
            color: rgb(255, 184, 184);
        }

        &.has-success {
            //color: green;
        }
    }
}

.connection-table,
.timing-table,
.certificate-table {
    td:nth-child(2) {
        font-family: @font-family-monospace;
        width: 70%;
    }

    width: 100%;
    table-layout: fixed;
    word-break: break-all;

    tr:not(:first-child) td {
        border-top: 1px solid var(--mitmweb-border-lighter);
    }

    td {
        vertical-align: top;
        //alt:
        //white-space: nowrap;
        //overflow: hidden;
        //text-overflow: ellipsis;
    }
}

.connection-table {
    td:first-child {
        padding-right: 1em;
    }
}

.headers,
.trailers {
    .kv-row {
        margin-bottom: 0.3em;
        max-height: 12.4ex;
        overflow-y: auto;
    }

    .kv-key {
        font-weight: bold;
    }

    .kv-value {
        font-family: @font-family-monospace;
    }

    .inline-input {
        background-color: var(--mitmweb-bg);
    }

    .kv-add-row {
        opacity: 0;
        color: var(--mitmweb-fg-muted);
        position: absolute;
        bottom: 4px;
        right: 4px;
        transition: all 100ms ease-in-out;
    }

    &:hover .kv-add-row {
        opacity: 1;
    }

    position: relative;
    min-height: 2ex;
    overflow-wrap: break-word;
}

.connection-table,
.timing-table {
    td {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

dl.cert-attributes {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    margin-bottom: 0;

    dt,
    dd {
        text-overflow: ellipsis;
        overflow: hidden;
    }

    dt {
        flex: 0 0 2em;
    }

    dd {
        flex: 0 0 calc(100% - 2em);
    }
}

.dns-request table,
.dns-response table {
    th,
    td {
        padding-right: 1rem;
    }
}

